Update chức năng thêm, sửa, xóa sản phẩm 28.11.22

--- a/muahang.html
+++ b/muahang.html
@@ -15,19 +15,22 @@
             <div class="Dangky__inner-Body">
                 <div class="form-dangky">
                     <div class="form-dangky__header">
-                        <h3 class="form-dangky__dangky">Đăng nhập</h3>
+                        <a class="form-dangky__dangky">Thông tin đơn</a>
                     </div>
                 </div>
                 <div class="form-nhapthongtin">
-                    <input id="user" class="form-nhapthongtin__nhapuser" placeholder="USER">
+                    <input class="form-nhapthongtin__nhapuser" placeholder="Số điện thoại">
                 </div>
                 <div class="form-nhapthongtin">
-                    <input id="password" class="form-nhapthongtin__nhappassword" placeholder="Password">
+                    <input class="form-nhapthongtin__nhappassword" placeholder="Địa chỉ nhận hàng">
+                </div>
+                <div class="form-nhapthongtin">
+                    <input class="form-nhapthongtin__nhappassword" placeholder="Số lượng">
                 </div>
             </div>
             <div class="Dangky__button">
                 <a class="btn" href="casestudymodule1.html">TRỞ LẠI</a>
-                <button class="btn btn-primary" onclick="login()"> ĐĂNG NHẬP</button>
+                <button class="btn btn-primary" onclick="location.href='dathangthanhcong.html'"> ĐẶT HÀNG </button>
             </div>
         </div>
     </div>
