--- a/sanpham.html
+++ b/sanpham.html
@@ -7,9 +7,10 @@
     <title> CaseStudy Module 1 </title>
     <link href="casestudy1.css" rel="stylesheet">
 </head>
-<body onload=""></body>
+<body>
+<script src="JScasestudy1.js"></script>
 <div class="allBody">
-<!--    Phần thân hiển thị danh sách sản phẩm-->
+    <!--    Phần thân hiển thị danh sách sản phẩm-->
     <div class="Body">
         <div class="Body__item">
             <h1>Danh mục sản phẩm</h1>
