--- a/casestudymodule1.html
+++ b/casestudymodule1.html
@@ -4,40 +4,41 @@
     <meta charset="UTF-8">
     <title> CaseStudy Module 1 </title>
     <link href="casestudy1.css" rel="stylesheet">
-    <link href="JScasestudy1.js"rel="stylesheet">
+    <link href="JScasestudy1.js" rel="stylesheet">
 </head>
-<body >
+<body>
 <script src="JScasestudy1.js"></script>
 <div class="allBody">
-<!--    Phần header-->
+    <!--    Phần header-->
     <div>
-         <form class="SEARCH" action="timkiem.html">
-             <img src="image/logo.png" alt="this is image">
-             <div class="SEARCH__box">
-                 <input type="search" class="search" placeholder="   Nhập từ khóa cần tìm...">
-                 <button type="submit" class="searchbutton" value="Tìm kiếm"> Tìm kiếm </button>
-             </div>
-             <div class="header">
-                 <a href="dangnhap.html"> ĐĂNG NHẬP </a>
-             </div>
-         </form>
+        <form class="SEARCH" action="timkiem.html">
+            <img src="image/logo.png" alt="this is image">
+            <div class="SEARCH__box">
+                <input type="search" class="search" placeholder="   Nhập từ khóa cần tìm...">
+                <button type="submit" class="searchbutton" value="Tìm kiếm"> Tìm kiếm</button>
+            </div>
+            <div class="header">
+                <a href="dangnhap.html"> ĐĂNG NHẬP </a>
+            </div>
+        </form>
     </div>
-<!--    Thanh menu-->
+    <!--    Thanh menu-->
     <div class="menu">
         <ul class="menu__ul">
-            <li class="menu__li"><a class="menu__a" href="file:///D:/CaseStudy%20module1/casestudymodule1.html">TRANG CHỦ </a></li>
+            <li class="menu__li"><a class="menu__a" href="file:///D:/CaseStudy%20module1/casestudymodule1.html">TRANG
+                CHỦ </a></li>
             <li class="menu__li"><a class="menu__a" href="sanpham.html">SẢN PHẨM</a></li>
             <li class="menu__li"><a class="menu__a" href="https://fujicarevietnam.vn/tin-tuc/">TIN TỨC</a></li>
             <li class="menu__li"><a class="menu__a" href="https://fujicarevietnam.vn/gioi-thieu/">GIỚI THIỆU</a></li>
             <li class="menu__li"><a class="menu__a" href="https://fujicarevietnam.vn/lien-he/">LIÊN HỆ</a></li>
         </ul>
     </div>
-<!--    Phần Body-->
-<!--    Phần Body hiển thị ảnh nền giới thiệu -->
+    <!--    Phần Body-->
+    <!--    Phần Body hiển thị ảnh nền giới thiệu -->
     <div class="hinhnen">
         <img src="image/FUJIBACKGROUND.png" alt="this is image">
     </div>
-<!--    Phần Body hiển thị danh sách sản phẩm-->
+    <!--    Phần Body hiển thị danh sách sản phẩm-->
     <div class="Body">
         <div class="Body__item">
             <h1>Danh mục sản phẩm</h1>
@@ -48,10 +49,10 @@
                     <img src="imageProduct/FC-350-02-8-768x768.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FC-350 </a>
-                    <div href="" class="sanpham__gia">32,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-350 </a>
+                    <div class="sanpham__gia">32,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -60,10 +61,10 @@
                     <img src="imageProduct/FC-600-04-8-768x768.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FC-600 </a>
-                    <div href="" class="sanpham__gia">42,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-600 </a>
+                    <div class="sanpham__gia">42,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -72,10 +73,10 @@
                     <img src="imageProduct/s555.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FC-S555 </a>
-                    <div href="" class="sanpham__gia">60,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-S555 </a>
+                    <div class="sanpham__gia">60,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -84,10 +85,10 @@
                     <img src="imageProduct/ghe-massage-FJ369.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FJ-369 </a>
-                    <div href="" class="sanpham__gia">37,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-369 </a>
+                    <div class="sanpham__gia">37,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -96,10 +97,10 @@
                     <img src="imageProduct/JC-3760-S-DREAM-768x768.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage JC-3760 </a>
-                    <div href="" class="sanpham__gia">47,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage JJ-3760 </a>
+                    <div class="sanpham__gia">47,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -108,10 +109,10 @@
                     <img src="imageProduct/fjs555-1.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FC-686 </a>
-                    <div href="" class="sanpham__gia">62,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-686 </a>
+                    <div class="sanpham__gia">62,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -120,10 +121,10 @@
                     <img src="imageProduct/JC-3730-1-768x768.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage JC-3730 </a>
-                    <div href="" class="sanpham__gia">57,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage JJ-3730 </a>
+                    <div class="sanpham__gia">57,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -132,10 +133,10 @@
                     <img src="imageProduct/ghe-massage-fj-250-min-600x600.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FJ-250 </a>
-                    <div href="" class="sanpham__gia">33,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-250 </a>
+                    <div class="sanpham__gia">33,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -144,10 +145,10 @@
                     <img src="imageProduct/999-1-300x300.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FJ-550 </a>
-                    <div href="" class="sanpham__gia">39,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-550 </a>
+                    <div class="sanpham__gia">39,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -156,10 +157,10 @@
                     <img src="imageProduct/ghe-massage-fc-8899-1-768x768.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FC-8899 </a>
-                    <div href="" class="sanpham__gia">89,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-8899 </a>
+                    <div class="sanpham__gia">89,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -168,10 +169,10 @@
                     <img src="imageProduct/PS9H1865-2-600x600.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage PS9H </a>
-                    <div href="" class="sanpham__gia">65,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-PS9H </a>
+                    <div class="sanpham__gia">65,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
@@ -180,67 +181,71 @@
                     <img src="imageProduct/Ban-sao-cua-fc-666-1-300x300.png" alt="this is image">
                 </a>
                 <div class="sanpham__ghichu">
-                    <a href="" class="sanpham__ten">Ghế Massage FC-666 </a>
-                    <div href="" class="sanpham__gia">55,000,000đ</div>
+                    <a class="sanpham__ten">Ghế Massage FJ-666 </a>
+                    <div class="sanpham__gia">55,000,000đ</div>
                     <div class="sanpham__mua">
-                        <button onclick="">Mua hàng</button>
+                        <button onclick="location.href='muahang.html'">Mua hàng</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer>
-        <div class="container">
-            <!--Bắt Đầu Nội Dung Giới Thiệu-->
-            <div class="noi-dung about">
-                <h2>Về Chúng Tôi</h2>
-                <p>Ghế massage DUY LUXURY là nhà sản xuất và phân phối ghế massage chính hãng và các thiết bị massage cao cấp hàng đầu tại Việt Nam.
-                    Là đối tác tin cậy của hàng loạt các thương hiệu quốc tế, sở hữu những sản phẩm và công nghệ độc quyền.
-                    Đi tiên phong trong việc ứng dụng công  nghệ 4.0 vào lĩnh vực chăm sóc sức khỏe tại Việt Nam.</p>
-            </div>
-            <!--Kết Thúc Nội Dung Giới Thiệu-->
-            <!--Bắt Đầu Nội Dung Đường Dẫn-->
-            <div class="noi-dung links">
-                <h2>Đường Dẫn</h2>
-                <ul>
-                    <li><a href="#">Trang Chủ</a></li>
-                    <li><a href="#">Về Chúng Tôi</a></li>
-                    <li><a href="#">Thông Tin Liên Lạc</a></li>
-                    <li><a href="#">Dịch Vụ</a></li>
-                    <li><a href="#">Điều Kiện Chính Sách</a></li>
-                </ul>
-            </div>
-            <!--Kết Thúc Nội Dung Đường Dẫn-->
-            <!--Bắt Đâu Nội Dung Liên Hệ-->
-            <div class="noi-dung contact">
-                <h2>Thông Tin Liên Hệ</h2>
-                <ul class="info">
-                    <li>
-                        <span><i class="fa fa-map-marker"></i></span>
-                        <span>Đường Số 1<br />
-                         Quận 1, Thành Phố Hà Nội, Việt Nam</span>
-                    </li>
-                    <li>
-                        <span><i class="fa fa-phone"></i></span>
-                        <a>Số điện thoại</a>
-                            <br />
-                            <a >123456789</a>
-                    </li>
-                    <li>
-                        <span><i class="fa fa-envelope"></i></span>
-                        <p><a href="">diachiemail@gmail.com</a></p>
-                    </li>
-                    <li>
-                        <form class="form">
-                            <input type="email" class="form__field" placeholder="Đăng Ký Subscribe Email" />
-                            <button type="button" class="btn btn--primary  uppercase">Gửi</button>
-                        </form>
-                    </li>
-                </ul>
-            </div>
-            <!--Kết Thúc Nội Dung Liên Hệ-->
+</div>
+<footer>
+    <div class="container">
+        <!--Bắt Đầu Nội Dung Giới Thiệu-->
+        <div class="noi-dung about">
+            <h2>Về Chúng Tôi</h2>
+            <p>Ghế massage DUY LUXURY là nhà sản xuất và phân phối ghế massage chính hãng và các thiết bị massage
+                cao cấp hàng đầu tại Việt Nam.
+                Là đối tác tin cậy của hàng loạt các thương hiệu quốc tế, sở hữu những sản phẩm và công nghệ độc
+                quyền.
+                Đi tiên phong trong việc ứng dụng công nghệ 4.0 vào lĩnh vực chăm sóc sức khỏe tại Việt Nam.</p>
         </div>
-    </footer>
+        <!--Kết Thúc Nội Dung Giới Thiệu-->
+        <!--Bắt Đầu Nội Dung Đường Dẫn-->
+        <div class="noi-dung links">
+            <h2>Đường Dẫn</h2>
+            <ul>
+                <li><a href="#">Trang Chủ</a></li>
+                <li><a href="#">Về Chúng Tôi</a></li>
+                <li><a href="#">Thông Tin Liên Lạc</a></li>
+                <li><a href="#">Dịch Vụ</a></li>
+                <li><a href="#">Điều Kiện Chính Sách</a></li>
+            </ul>
+        </div>
+        <!--Kết Thúc Nội Dung Đường Dẫn-->
+        <!--Bắt Đâu Nội Dung Liên Hệ-->
+        <div class="noi-dung contact">
+            <h2>Thông Tin Liên Hệ</h2>
+            <ul class="info">
+                <li>
+                    <span><i class="fa fa-map-marker"></i></span>
+                    <span>Đường Số 1<br/>
+                         Quận 1, Thành Phố Hà Nội, Việt Nam</span>
+                </li>
+                <li>
+                    <span><i class="fa fa-phone"></i></span>
+                    <a>Số điện thoại</a>
+                    <br/>
+                    <a>123456789</a>
+                </li>
+                <li>
+                    <span><i class="fa fa-envelope"></i></span>
+                    <p><a href="">diachiemail@gmail.com</a></p>
+                </li>
+                <li>
+                    <form class="form">
+                        <input type="email" class="form__field" placeholder="Đăng Ký Subscribe Email"/>
+                        <button type="button" class="btn btn--primary  uppercase">Gửi</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+        <!--Kết Thúc Nội Dung Liên Hệ-->
+    </div>
+</footer>
+
 </div>
 </body>
 </html>
